# IRF_PythonCourse

./: .gitignore
Lecture 1/: HelloWorld.py
Lecture 2/: Random_Programming.py  Token.txt
Lecture_2/: Matix_Multiplication.py  Testing_Example_Package.py
PythonCourse/: pyvenv.cfg
packaging_tutorial/: pyproject.toml
packaging_tutorial/src/example_package_Adam_ElGhaib/: example.py
packaging_tutorial/src/example_package_Adam_ElGhaib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
packaging_tutorial/tests/: Testing.py
