[project]
name = "example_package_Adam_ElGhaib"
version = "0.1.1"
authors = [
  { name="Adam El Ghaib", email="adaelg-4b@student.ltu.se" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"